@@ -114,7 +114,8 @@ SECTIONS
 
     .eh_frame : ONLY_IF_RO {*(.eh_frame)} > flash
 
-    . = ALIGN(4);
+    .textalign : ONLY_IF_RO { . = ALIGN(8); } > flash
+
     _etext = .;
     _textdata = _etext;
 
@@ -135,6 +136,7 @@ SECTIONS
 
     .data :
     {
+        . = ALIGN(4);
         PROVIDE(_data = .);
         *(.data)
         . = ALIGN(4);
@@ -147,6 +149,7 @@ SECTIONS
 
     .bss :
     {
+        . = ALIGN(4);
         PROVIDE(_bss_start = .);
         *(.bss)
         . = ALIGN(4);
